# projectm

./: configure.ac
src/: Makefile.am
src/projectM-gtk/: .gitignore  BUILDING.md  Makefile  Makefile.am  main.c  projectM-gtk  projectM-gtk.c  projectM-gtk.cpp
